--- a/template/index.html
+++ b/template/index.html
@@ -7,10 +7,10 @@
 		<link rel="icon" type="image/svg+xml" href="./favicon.svg">
 		<meta name="generator" content="Astro v2.7.3">
 		<title>Welcome to Astro.</title>
-	<link rel="stylesheet" href="/amigo/_astro/cennik.c058f0e6.css" />
-<link rel="stylesheet" href="/amigo/_astro/template.874820eb.css" />
-<link rel="stylesheet" href="/amigo/_astro/cennik.ef3619b3.css" />
-<link rel="stylesheet" href="/amigo/_astro/cennik.dbc55dfd.css" /><script type="module" src="/amigo/_astro/hoisted.67dc6521.js"></script></head>
+	<link rel="stylesheet" href="/_astro/cennik.c058f0e6.css" />
+<link rel="stylesheet" href="/_astro/template.874820eb.css" />
+<link rel="stylesheet" href="/_astro/cennik.ef3619b3.css" />
+<link rel="stylesheet" href="/_astro/cennik.dbc55dfd.css" /><script type="module" src="/_astro/hoisted.2085be01.js"></script></head>
 	<body>
     <header class="astro-DMQPWCEC">
   <wrapper class="header__wrapper astro-DMQPWCEC">
@@ -76,18 +76,7 @@
         </li><li class="c-breadcrumbs__crumb">
           
 
-          <a href="/amigo" class="c-breadcrumbs__link">
-              amigo
-            </a>
-
-          <span class="c-breadcrumbs__separator" aria-hidden="true">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline>
-        </svg>
-            </span>
-        </li><li class="c-breadcrumbs__crumb">
-          
-
-          <a href="/amigo/template" class="c-breadcrumbs__link is-current" aria-current="location">
+          <a href="/template" class="c-breadcrumbs__link is-current" aria-current="location">
               template
             </a>
 
@@ -95,7 +84,7 @@
         </li>
   </ol>
 </nav>
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@id":"/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@id":"/amigo","name":"amigo"}},{"@type":"ListItem","position":3,"item":{"@id":"/amigo/template","name":"template"}}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"item":{"@id":"/","name":"Home"}},{"@type":"ListItem","position":2,"item":{"@id":"/template","name":"template"}}]}</script>
     </div>
 		
 	<main class="astro-3EY46BD7">
